CKS-Walk-Thru-002/06-network-policies/01-backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: netpol-test
  labels:
    app: backend
spec:
  containers:
  - name: web
    image: nginx
    ports:
    - containerPort: 80
