CKS-Walk-Thru-002/06-network-policies/02-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: trusted-client
  namespace: netpol-test
  labels:
    access: granted
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]
